force-app/main/default/objects/Master_Framework_Lot_Code__c/Master_Framework_Lot_Code__c.object-meta.xml
<CustomObject>
    <description>Technical - Intersection object to map many to many relationship between Code and Framework Lot.
Functional - Enables user to associate many Codes with a single Framework Lot.</description>
    <label>Framework Lot Code</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Lot Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>