force-app/main/default/objects/Master_Framework_Lot_Code__c/fields/CAS_Master_Category__c.field-meta.xml
<CustomField>
    <fullName>CAS_Master_Category__c</fullName>
    <formula>Code__r.Parent__r.Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAS Master Category</label>
    <type>Text</type>
</CustomField>