force-app/main/default/objects/Master_Framework_Lot_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category__c.CategoryType__c</field>
            <operation>equals</operation>
            <value>Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Framework_Lot_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>