force-app/main/default/objects/Master_Framework_Lot_Code__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <formula>TEXT(Code__r.Code_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Type</label>
    <type>Text</type>
</CustomField>