force-app/main/default/objects/Master_Framework_Lot_Code__c/fields/Master_Framework_Lot__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot__c</fullName>
    <description>Associate relevant Framework Lot with this record</description>
    <label>Framework Lot</label>
    <referenceTo>Master_Framework_Lot__c</referenceTo>
    <relationshipLabel>Framework Lot Codes</relationshipLabel>
    <relationshipName>Codes_For_Master_Framework_Lot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>