force-app/main/default/objects/Master_Framework_Lot_Code__c/fields/Master_Framework_Lot_Code_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot_Code_External_Id__c</fullName>
    <description>External Id (not generated by Salesforce) - used to enable lookups and upserts by external reference numbers for data loading.</description>
    <externalId>true</externalId>
    <label>Master Framework Lot Code External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>