force-app/main/default/objects/Master_Framework_Lot_Code__c/fields/Product_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Description__c</fullName>
    <formula>Code__r.Product_Group_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Description</label>
    <type>Text</type>
</CustomField>